--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ba1cdd1a",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,8 @@
     "import yfinance as yf\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "pd.options.mode.chained_assignment = None"
+    "pd.options.mode.chained_assignment = None\n",
+    "pd.options.display.float_format = '{:,.2f}'.format"
    ]
   },
   {
@@ -24,16 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickersdf = pd.read_html('https://en.wikipedia.org/wiki/List_of_S%26P_500_companies')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b92b2730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tickersdf = pd.read_html('https://en.wikipedia.org/wiki/List_of_S%26P_500_companies')[0]\n",
     "tickers =  [i.replace('.','-') for i in tickersdf.Symbol.to_list()]\n",
     "# Remove offending symbols as neede\n",
     "tickers.remove('WRK')"
@@ -46,15 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('datasets/AAPL.csv.gz', index_col='Date', parse_dates=True)\n",
-    "df['date'] = df.index\n",
-    "buy, sell = getSignals(df)\n",
-    "\n",
-    "frame = df.copy()\n",
-    "plt.figure(figsize=(20,5))\n",
-    "plt.scatter(frame.loc[buy].index, frame.loc[buy]['open'], marker='^',c='g')\n",
-    "plt.scatter(frame.loc[sell].index, frame.loc[sell]['open'], marker='*',c='r')\n",
-    "plt.plot(frame['close'], alpha=0.7)"
+    "def plot_signals(df):\n",
+    "    frame = df.copy()\n",
+    "    plt.figure(figsize=(20,5))\n",
+    "    plt.scatter(frame.loc[buy].index, frame.loc[buy]['open'], marker='^',c='g')\n",
+    "    plt.scatter(frame.loc[sell].index, frame.loc[sell]['open'], marker='*',c='r')\n",
+    "    plt.plot(frame['close'], alpha=0.7)"
    ]
   },
   {
@@ -66,10 +55,6 @@
    },
    "outputs": [],
    "source": [
-    "def myRSI(symbol):\n",
-    "    df['Upmove'] = df['price_change'].apply(lambda x: x if x > 0 else 0)\n",
-    "    df['avg_down'] = df.Downmove.ewm(span=19).mean()\n",
-    "\n",
     "def flatten(t):\n",
     "    return [item for sublist in t for item in sublist]\n",
     "\n",
@@ -160,9 +145,7 @@
    "cell_type": "code",
    "execution_count": 116,
    "id": "47c9c7d7",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -262,9 +245,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9aa45965",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(results)\n",
@@ -277,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "id": "691d1b56",
    "metadata": {},
    "outputs": [
@@ -308,174 +289,118 @@
        "      <th>close</th>\n",
        "      <th>adj close</th>\n",
        "      <th>volume</th>\n",
-       "      <th>symbol</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2005-01-03</th>\n",
-       "      <td>1.156786</td>\n",
-       "      <td>1.162679</td>\n",
-       "      <td>1.117857</td>\n",
-       "      <td>1.130179</td>\n",
-       "      <td>0.971844</td>\n",
-       "      <td>691992000</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>count</th>\n",
+       "      <td>4,169.00</td>\n",
+       "      <td>4,169.00</td>\n",
+       "      <td>4,169.00</td>\n",
+       "      <td>4,169.00</td>\n",
+       "      <td>4,169.00</td>\n",
+       "      <td>4,169.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-04</th>\n",
-       "      <td>1.139107</td>\n",
-       "      <td>1.169107</td>\n",
-       "      <td>1.124464</td>\n",
-       "      <td>1.141786</td>\n",
-       "      <td>0.981825</td>\n",
-       "      <td>1096810400</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>188.89</td>\n",
+       "      <td>189.92</td>\n",
+       "      <td>187.75</td>\n",
+       "      <td>188.91</td>\n",
+       "      <td>167.33</td>\n",
+       "      <td>135,653,037.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-05</th>\n",
-       "      <td>1.151071</td>\n",
-       "      <td>1.165179</td>\n",
-       "      <td>1.143750</td>\n",
-       "      <td>1.151786</td>\n",
-       "      <td>0.990424</td>\n",
-       "      <td>680433600</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>std</th>\n",
+       "      <td>79.09</td>\n",
+       "      <td>79.39</td>\n",
+       "      <td>78.76</td>\n",
+       "      <td>79.12</td>\n",
+       "      <td>86.25</td>\n",
+       "      <td>96,485,287.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-06</th>\n",
-       "      <td>1.154821</td>\n",
-       "      <td>1.159107</td>\n",
-       "      <td>1.130893</td>\n",
-       "      <td>1.152679</td>\n",
-       "      <td>0.991192</td>\n",
-       "      <td>705555200</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>min</th>\n",
+       "      <td>67.95</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>67.10</td>\n",
+       "      <td>68.11</td>\n",
+       "      <td>53.16</td>\n",
+       "      <td>15,270,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-07</th>\n",
-       "      <td>1.160714</td>\n",
-       "      <td>1.243393</td>\n",
-       "      <td>1.156250</td>\n",
-       "      <td>1.236607</td>\n",
-       "      <td>1.063362</td>\n",
-       "      <td>2227450400</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>127.42</td>\n",
+       "      <td>128.23</td>\n",
+       "      <td>126.62</td>\n",
+       "      <td>127.44</td>\n",
+       "      <td>97.82</td>\n",
+       "      <td>69,192,800.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>156.93</td>\n",
+       "      <td>157.52</td>\n",
+       "      <td>155.91</td>\n",
+       "      <td>156.82</td>\n",
+       "      <td>133.84</td>\n",
+       "      <td>105,255,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-19</th>\n",
-       "      <td>143.750000</td>\n",
-       "      <td>144.070007</td>\n",
-       "      <td>141.669998</td>\n",
-       "      <td>142.449997</td>\n",
-       "      <td>142.449997</td>\n",
-       "      <td>121434600</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>241.18</td>\n",
+       "      <td>242.08</td>\n",
+       "      <td>239.45</td>\n",
+       "      <td>240.61</td>\n",
+       "      <td>224.30</td>\n",
+       "      <td>169,863,700.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-20</th>\n",
-       "      <td>143.460007</td>\n",
-       "      <td>147.100006</td>\n",
-       "      <td>142.960007</td>\n",
-       "      <td>146.149994</td>\n",
-       "      <td>146.149994</td>\n",
-       "      <td>96238600</td>\n",
-       "      <td>AAPL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-21</th>\n",
-       "      <td>145.529999</td>\n",
-       "      <td>146.130005</td>\n",
-       "      <td>144.630005</td>\n",
-       "      <td>145.399994</td>\n",
-       "      <td>145.399994</td>\n",
-       "      <td>74915000</td>\n",
-       "      <td>AAPL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-22</th>\n",
-       "      <td>145.940002</td>\n",
-       "      <td>148.199997</td>\n",
-       "      <td>145.809998</td>\n",
-       "      <td>146.800003</td>\n",
-       "      <td>146.800003</td>\n",
-       "      <td>77338200</td>\n",
-       "      <td>AAPL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-23</th>\n",
-       "      <td>147.550003</td>\n",
-       "      <td>148.720001</td>\n",
-       "      <td>146.919998</td>\n",
-       "      <td>148.559998</td>\n",
-       "      <td>148.559998</td>\n",
-       "      <td>71361600</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <th>max</th>\n",
+       "      <td>439.31</td>\n",
+       "      <td>441.03</td>\n",
+       "      <td>439.26</td>\n",
+       "      <td>441.02</td>\n",
+       "      <td>441.02</td>\n",
+       "      <td>871,026,300.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4168 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  open        high         low       close   adj close  \\\n",
-       "Date                                                                     \n",
-       "2005-01-03    1.156786    1.162679    1.117857    1.130179    0.971844   \n",
-       "2005-01-04    1.139107    1.169107    1.124464    1.141786    0.981825   \n",
-       "2005-01-05    1.151071    1.165179    1.143750    1.151786    0.990424   \n",
-       "2005-01-06    1.154821    1.159107    1.130893    1.152679    0.991192   \n",
-       "2005-01-07    1.160714    1.243393    1.156250    1.236607    1.063362   \n",
-       "...                ...         ...         ...         ...         ...   \n",
-       "2021-07-19  143.750000  144.070007  141.669998  142.449997  142.449997   \n",
-       "2021-07-20  143.460007  147.100006  142.960007  146.149994  146.149994   \n",
-       "2021-07-21  145.529999  146.130005  144.630005  145.399994  145.399994   \n",
-       "2021-07-22  145.940002  148.199997  145.809998  146.800003  146.800003   \n",
-       "2021-07-23  147.550003  148.720001  146.919998  148.559998  148.559998   \n",
-       "\n",
-       "                volume symbol  \n",
-       "Date                           \n",
-       "2005-01-03   691992000   AAPL  \n",
-       "2005-01-04  1096810400   AAPL  \n",
-       "2005-01-05   680433600   AAPL  \n",
-       "2005-01-06   705555200   AAPL  \n",
-       "2005-01-07  2227450400   AAPL  \n",
-       "...                ...    ...  \n",
-       "2021-07-19   121434600   AAPL  \n",
-       "2021-07-20    96238600   AAPL  \n",
-       "2021-07-21    74915000   AAPL  \n",
-       "2021-07-22    77338200   AAPL  \n",
-       "2021-07-23    71361600   AAPL  \n",
-       "\n",
-       "[4168 rows x 7 columns]"
+       "          open     high      low    close  adj close         volume\n",
+       "count 4,169.00 4,169.00 4,169.00 4,169.00   4,169.00       4,169.00\n",
+       "mean    188.89   189.92   187.75   188.91     167.33 135,653,037.25\n",
+       "std      79.09    79.39    78.76    79.12      86.25  96,485,287.45\n",
+       "min      67.95    70.00    67.10    68.11      53.16  15,270,000.00\n",
+       "25%     127.42   128.23   126.62   127.44      97.82  69,192,800.00\n",
+       "50%     156.93   157.52   155.91   156.82     133.84 105,255,000.00\n",
+       "75%     241.18   242.08   239.45   240.61     224.30 169,863,700.00\n",
+       "max     439.31   441.03   439.26   441.02     441.02 871,026,300.00"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "def load_symbol(symbol):\n",
+    "    file = f\"datasets/{symbol}.csv.gz\"\n",
+    "    if os.path.isfile(file):\n",
+    "        df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
+    "    else:\n",
+    "        period = '3mo'\n",
+    "        df = yf.download(symbol, progress=False, start='2005-01-01')\n",
+    "        df.columns = df.columns.str.lower()\n",
+    "        df.to_csv(file,index=True)\n",
+    "    df['symbol'] = symbol\n",
+    "    df.name = symbol\n",
+    "    return df\n",
+    "\n",
+    "df = load_symbol('SPY')\n",
+    "df.describe()"
    ]
   }
  ],
