--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ba1cdd1a",
    "metadata": {},
    "outputs": [],
@@ -202,13 +202,9 @@
     "    \n",
     "    cutoff = df.tail(params['max_lookahead']+1).index.min()\n",
     "    \n",
-    "    # RSI xUnder\n",
-    "    signals = df.loc[(df.close > df.sma) & (df.rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
-    "    # RSI xOver\n",
-    "    signals = df.loc[(df.close > df.sma) & (df.rsi > params['rsi_entry']) & (df.shift(1).rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
     "    trades = []\n",
     "\n",
-    "    def apply_trade(row):\n",
+    "    def apply_trade(row, tag):\n",
     "        if in_trade(row.name, trades): return None\n",
     "        iloc = df.index.get_loc(row.name)\n",
     "        buy_row = df.iloc[iloc+1]\n",
@@ -217,11 +213,11 @@
     "            sell_stop = buy_row.open * (1.0 - (params['stop_loss_pct']/100))\n",
     "        sell_row = None\n",
     "        sell_descr = 'max_days'\n",
-    "        for j in range(1,params['max_lookahead']):\n",
+    "        for j in range(1,params['max_trade_days']):\n",
     "            this_day = df.iloc[iloc + j]\n",
     "            sell_row = df.iloc[iloc + j + 1]\n",
     "            if this_day.rsi > params['rsi_exit']:\n",
-    "                sell_descr = 'xOverRSI'\n",
+    "                sell_descr = 'rsi_exit'\n",
     "                break\n",
     "            if sell_stop and this_day.low < sell_stop:\n",
     "                sell_descr = 'stop_loss'\n",
@@ -230,7 +226,14 @@
     "        trades.append([symbol, buy_row.name, buy_row.open, sell_row.name, sell_row.open, pct_return, sell_descr])\n",
     "        return None\n",
     "\n",
+    "    # RSI xUnder\n",
+    "    signals = df.loc[(df.close > df.sma) & (df.rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
+    "    signals.apply(lambda row: apply_trade(row, tag), axis=1)\n",
+    "\n",
+    "    # RSI xOver\n",
+    "    signals = df.loc[(df.close > df.sma) & (df.rsi > params['rsi_entry']) & (df.shift(1).rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
     "    signals.apply(lambda row: apply_trade(row), axis=1)\n",
+    "    \n",
     "    return pd.DataFrame(trades, columns=['symbol', 'bdate', 'bprice', 'sdate', 'sprice', 'pct_return', 'sell_descr'])\n",
     "\n",
     "# Testing section\n",
@@ -402,6 +405,321 @@
     "df = load_symbol('SPY')\n",
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e400b3d0-fce7-4a06-9ce3-697af1ff0ccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adj close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2005-01-03</th>\n",
+       "      <td>2005-01-03</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>691992000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-04</th>\n",
+       "      <td>2005-01-04</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>1096810400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-05</th>\n",
+       "      <td>2005-01-05</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>680433600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-06</th>\n",
+       "      <td>2005-01-06</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>705555200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-07</th>\n",
+       "      <td>2005-01-07</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>2227450400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-22</th>\n",
+       "      <td>2021-07-22</td>\n",
+       "      <td>145.94</td>\n",
+       "      <td>148.20</td>\n",
+       "      <td>145.81</td>\n",
+       "      <td>146.80</td>\n",
+       "      <td>146.80</td>\n",
+       "      <td>77338200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-23</th>\n",
+       "      <td>2021-07-23</td>\n",
+       "      <td>147.55</td>\n",
+       "      <td>148.72</td>\n",
+       "      <td>146.92</td>\n",
+       "      <td>148.56</td>\n",
+       "      <td>148.56</td>\n",
+       "      <td>71361600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-26 00:00:00</th>\n",
+       "      <td>2021-07-26 00:00:00</td>\n",
+       "      <td>148.27</td>\n",
+       "      <td>149.83</td>\n",
+       "      <td>147.70</td>\n",
+       "      <td>148.99</td>\n",
+       "      <td>148.99</td>\n",
+       "      <td>72269700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-27 00:00:00</th>\n",
+       "      <td>2021-07-27 00:00:00</td>\n",
+       "      <td>149.12</td>\n",
+       "      <td>149.21</td>\n",
+       "      <td>145.55</td>\n",
+       "      <td>146.77</td>\n",
+       "      <td>146.77</td>\n",
+       "      <td>103580300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-28 00:00:00</th>\n",
+       "      <td>2021-07-28 00:00:00</td>\n",
+       "      <td>144.81</td>\n",
+       "      <td>146.97</td>\n",
+       "      <td>142.54</td>\n",
+       "      <td>144.98</td>\n",
+       "      <td>144.98</td>\n",
+       "      <td>118834300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4171 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    date   open   high    low  close  \\\n",
+       "2005-01-03                    2005-01-03   1.16   1.16   1.12   1.13   \n",
+       "2005-01-04                    2005-01-04   1.14   1.17   1.12   1.14   \n",
+       "2005-01-05                    2005-01-05   1.15   1.17   1.14   1.15   \n",
+       "2005-01-06                    2005-01-06   1.15   1.16   1.13   1.15   \n",
+       "2005-01-07                    2005-01-07   1.16   1.24   1.16   1.24   \n",
+       "...                                  ...    ...    ...    ...    ...   \n",
+       "2021-07-22                    2021-07-22 145.94 148.20 145.81 146.80   \n",
+       "2021-07-23                    2021-07-23 147.55 148.72 146.92 148.56   \n",
+       "2021-07-26 00:00:00  2021-07-26 00:00:00 148.27 149.83 147.70 148.99   \n",
+       "2021-07-27 00:00:00  2021-07-27 00:00:00 149.12 149.21 145.55 146.77   \n",
+       "2021-07-28 00:00:00  2021-07-28 00:00:00 144.81 146.97 142.54 144.98   \n",
+       "\n",
+       "                     adj close      volume  \n",
+       "2005-01-03                0.97   691992000  \n",
+       "2005-01-04                0.98  1096810400  \n",
+       "2005-01-05                0.99   680433600  \n",
+       "2005-01-06                0.99   705555200  \n",
+       "2005-01-07                1.06  2227450400  \n",
+       "...                        ...         ...  \n",
+       "2021-07-22              146.80    77338200  \n",
+       "2021-07-23              148.56    71361600  \n",
+       "2021-07-26 00:00:00     148.99    72269700  \n",
+       "2021-07-27 00:00:00     146.77   103580300  \n",
+       "2021-07-28 00:00:00     144.98   118834300  \n",
+       "\n",
+       "[4171 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas_market_calendars as mcal\n",
+    "symbol = 'AAPL'\n",
+    "file = f\"datasets/{symbol}.csv.gz\"\n",
+    "df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
+    "df = pd.read_csv(file, parse_dates=True)\n",
+    "df.columns = df.columns.str.lower()\n",
+    "df.index = df.date\n",
+    "df.symbol = symbol\n",
+    "#df['symbol'] = symbol\n",
+    "\n",
+    "def need_update(df):  \n",
+    "    symbol = df.symbol\n",
+    "    last_ts = df.iloc[-1].name\n",
+    "    nyse = mcal.get_calendar('NYSE')\n",
+    "    schedule = nyse.schedule(start_date=last_ts, end_date=last_ts)\n",
+    "    last_ts = schedule.loc[last_ts].market_close\n",
+    "    next_close_ts = last_ts + dt.timedelta(days=1)\n",
+    "\n",
+    "    now_ts = pd.Timestamp.utcnow()\n",
+    "    schedule = nyse.schedule(start_date=now_ts, end_date=now_ts).iloc[0]\n",
+    "\n",
+    "    if next_close_ts >= schedule.market_close:\n",
+    "        return False\n",
+    "    # TODO: How does this handle weekends and mid day\n",
+    "    # end is not included\n",
+    "    delta_df = yf.download(symbol, progress=False, start=next_close_ts.strftime('%Y-%m-%d'))\n",
+    "    delta_df.columns = delta_df.columns.str.lower()\n",
+    "    delta_df['date'] = delta_df.index\n",
+    "    df = df.append(delta_df)\n",
+    "    df.symbol = symbol\n",
+    "    return df\n",
+    "\n",
+    "df = need_update(df)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bcfe99f8-c9d3-4542-876e-8a724123a339",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>bdate</th>\n",
+       "      <th>bprice</th>\n",
+       "      <th>sdate</th>\n",
+       "      <th>sprice</th>\n",
+       "      <th>pct_return</th>\n",
+       "      <th>sell_descr</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>sma</th>\n",
+       "      <th>atr</th>\n",
+       "      <th>adx</th>\n",
+       "      <th>strategy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>QQQ</td>\n",
+       "      <td>2010-05-11</td>\n",
+       "      <td>47.29</td>\n",
+       "      <td>2010-05-12</td>\n",
+       "      <td>47.98</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>44.63</td>\n",
+       "      <td>46.56</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>rsi_xover</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  symbol      bdate  bprice      sdate  sprice  pct_return sell_descr   rsi  \\\n",
+       "0    QQQ 2010-05-11   47.29 2010-05-12   47.98        0.01   rsi_exit 44.63   \n",
+       "\n",
+       "    sma  atr  adx   strategy  \n",
+       "0 46.56 1.30    0  rsi_xover  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#%run rsi_momo.py\n",
+    "symbol = 'QQQ'\n",
+    "df = load_symbol(symbol)\n",
+    "params = {'rsi_entry': 25, 'rsi_exit': 40, 'sma_period': 100, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1385 }\n",
+    "rsi_momo_strategy(symbol, df, params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d8f3b8-d511-4a6c-a42b-e50bce7f5d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
