--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -48,366 +48,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1cdc929",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "def flatten(t):\n",
-    "    return [item for sublist in t for item in sublist]\n",
-    "\n",
-    "def load_symbol(symbol):\n",
-    "    file = f\"datasets/{symbol}.csv.gz\"\n",
-    "    if os.path.isfile(file):\n",
-    "        df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
-    "    else:\n",
-    "        period = '3mo'\n",
-    "        df = yf.download(symbol, progress=False, start='2005-01-01')\n",
-    "        df.columns = df.columns.str.lower()\n",
-    "        df.to_csv(file,index=True)\n",
-    "    df['symbol'] = symbol\n",
-    "    df.name = symbol\n",
-    "    return df\n",
-    "\n",
-    "def uberdf_load_all():\n",
-    "    start = time.time()\n",
-    "    frames = {}\n",
-    "    for filename in os.listdir('datasets'):\n",
-    "        symbol = filename.split(\".\")[0]\n",
-    "        df = load_symbol(symbol)\n",
-    "        if df.empty: continue\n",
-    "        frames[symbol] = df\n",
-    "    end = time.time()\n",
-    "    print(f'Elapsed: {end - start:0.2f}')\n",
-    "    return frames\n",
-    "\n",
-    "def uberdf_one_config(udf, params):\n",
-    "    print(f'uberdf_one_config: {params}')\n",
-    "    start = time.time()\n",
-    "    if len(udf) == 0:\n",
-    "        print(f'Loading history from filesystem')\n",
-    "        udf = {}\n",
-    "        for filename in os.listdir('datasets'):\n",
-    "            symbol = filename.split(\".\")[0]\n",
-    "            udf[symbol] = load_symbol(symbol)\n",
-    "    \n",
-    "    frames = []\n",
-    "    i = 0\n",
-    "    for symbol in udf.keys():\n",
-    "        i += 1\n",
-    "        #if i > 2: break\n",
-    "        df = udf[symbol]\n",
-    "        #print(f'uberdf_main {i:04d}:{symbol:6s} len={len(df)}')\n",
-    "        df = rsi_momo_strategy(symbol, df, params)\n",
-    "        if i % 5 != 0: continue\n",
-    "        #    print(f'backtest {i:04d}:{symbol:6s} buys:{df.bprice.count()}  mean:{df.pct_return.mean():05.2f}')\n",
-    "        frames.append(df)\n",
-    "\n",
-    "    xdf = pd.concat(frames)\n",
-    "    end = time.time()\n",
-    "    params['elapsed'] = end - start\n",
-    "    params['trades'] = len(xdf)\n",
-    "    if len(xdf) > 0:        \n",
-    "        params['wins'] = wins = xdf.loc[xdf.pct_return > 0].pct_return.count()\n",
-    "        params['pct_wins'] = params['wins'] / len(xdf)\n",
-    "    else:\n",
-    "        params['wins'] = 0\n",
-    "        params['pct_wins'] = 0\n",
-    "    params['mean'] = xdf.pct_return.mean() \n",
-    "    params['std'] = xdf.pct_return.std()\n",
-    "    params['sum'] = xdf.pct_return.sum()\n",
-    "    print(f'uberdf_one_config: results={params}')\n",
-    "    #print(f'uberdf_one_config: mean={params[\"mean\"]:04.2f} std={params[\"sum\"]:04.2f} sum={params[\"std\"]:04.2f}')\n",
-    "    #print(f'Summary: wins={wins} total={total} rate={wins/total*100:04.2f} pct_return={xdf.pct_return.mean()*100:05.2f}%')\n",
-    "    #print(xdf.pct_return.describe())\n",
-    "    return xdf\n",
-    "\n",
-    "def uberdf_main(shard_id=None,shard_max=None):\n",
-    "    start = time.time()\n",
-    "    configs = enumerate_params()\n",
-    "    i = 0\n",
-    "    for params in configs:\n",
-    "        i += 1\n",
-    "        params['id'] = i\n",
-    "        if shard_id and i % shard_max != shard_id: continue\n",
-    "        uberdf_one_config(udf, params)\n",
-    "    end = time.time()\n",
-    "    print(f'uberdf_main: Elapsed: {end - start:0.2f}')\n",
-    "    return configs\n",
-    "\n",
-    "udf = uberdf_load_all()\n",
-    "results = uberdf_main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "id": "47c9c7d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rsi_momo_strategy\n",
-      "  symbol      bdate      bprice      sdate      sprice  pct_return sell_descr\n",
-      "0   AAPL 2006-03-29    2.111786 2006-03-30    2.243571    0.062405   xOverRSI\n",
-      "1   AAPL 2015-07-10   30.485001 2015-07-13   31.257500    0.025340   xOverRSI\n",
-      "2   AAPL 2016-11-07   27.520000 2016-11-09   27.469999   -0.001817   xOverRSI\n",
-      "3   AAPL 2016-11-15   26.642500 2016-11-17   27.452499    0.030403   xOverRSI\n",
-      "4   AAPL 2018-02-05   39.775002 2018-02-13   40.487499    0.017913   xOverRSI\n",
-      "5   AAPL 2020-02-28   64.315002 2020-03-03   75.917503    0.180401   xOverRSI\n",
-      "6   AAPL 2021-02-26  122.589996 2021-03-02  128.410004    0.047475   xOverRSI\n"
-     ]
-    }
-   ],
-   "source": [
-    "def enumerate_params():\n",
-    "    keys = ['rsi_entry', 'rsi_exit', 'sma_period', 'stop_loss_pct', 'max_lookahead']\n",
-    "    params =  []\n",
-    "    for rsi_entry in range(15,31,5):\n",
-    "        for rsi_exit in range(35,46,5):\n",
-    "            for sma_period in range(100,201,20):\n",
-    "                for stop_loss_pct in range(0,6,1):\n",
-    "                    for max_lookahead in range(4,17,2):\n",
-    "                        param = dict(zip(keys, [rsi_entry, rsi_exit, sma_period, stop_loss_pct, max_lookahead]))\n",
-    "                        params.append(param)\n",
-    "    return params\n",
-    "\n",
-    "def enumerate_params_products():\n",
-    "    keys = ['rsi_entry', 'rsi_exit', 'sma_period', 'stop_loss_pct', 'max_lookahead']\n",
-    "    params =  []\n",
-    "    r_rsi_entry = list(range(15,31,5))\n",
-    "    r_rsi_exit = list(range(35,46,5))\n",
-    "    r_sma_period = list(range(100,201,20))\n",
-    "    r_stop_loss_pct = list(range(0,6,1))\n",
-    "    r_max_lookahead = list(range(4,17,2))\n",
-    "    list(itertools.product(r_rsi_entry,r_rsi_exit, r_sma_period, r_stop_loss_pct, r_max_lookahead))\n",
-    "    return params\n",
-    "\n",
-    "def in_trade(idx, trades):\n",
-    "    for t in trades:\n",
-    "        if t[1] <= idx and t[3] > idx: return True\n",
-    "    return False\n",
-    "\n",
-    "def rsi_momo_strategy(symbol, df, params):\n",
-    "    stop_loss_pct = params['stop_loss_pct']\n",
-    "    df = df.copy()\n",
-    "    df.name = symbol\n",
-    "    df['rsi'] = df.ta.rsi()\n",
-    "    df['sma'] = df.ta.sma(params['sma_period'])\n",
-    "    df.dropna(inplace=True)\n",
-    "    \n",
-    "    cutoff = df.tail(params['max_lookahead']+1).index.min()\n",
-    "    \n",
-    "    trades = []\n",
-    "\n",
-    "    def apply_trade(row, tag):\n",
-    "        if in_trade(row.name, trades): return None\n",
-    "        iloc = df.index.get_loc(row.name)\n",
-    "        buy_row = df.iloc[iloc+1]\n",
-    "        sell_stop = None\n",
-    "        if params['stop_loss_pct']:\n",
-    "            sell_stop = buy_row.open * (1.0 - (params['stop_loss_pct']/100))\n",
-    "        sell_row = None\n",
-    "        sell_descr = 'max_days'\n",
-    "        for j in range(1,params['max_trade_days']):\n",
-    "            this_day = df.iloc[iloc + j]\n",
-    "            sell_row = df.iloc[iloc + j + 1]\n",
-    "            if this_day.rsi > params['rsi_exit']:\n",
-    "                sell_descr = 'rsi_exit'\n",
-    "                break\n",
-    "            if sell_stop and this_day.low < sell_stop:\n",
-    "                sell_descr = 'stop_loss'\n",
-    "                break\n",
-    "        pct_return = sell_row.open / buy_row.open - 1\n",
-    "        trades.append([symbol, buy_row.name, buy_row.open, sell_row.name, sell_row.open, pct_return, sell_descr])\n",
-    "        return None\n",
-    "\n",
-    "    # RSI xUnder\n",
-    "    signals = df.loc[(df.close > df.sma) & (df.rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
-    "    signals.apply(lambda row: apply_trade(row, tag), axis=1)\n",
-    "\n",
-    "    # RSI xOver\n",
-    "    signals = df.loc[(df.close > df.sma) & (df.rsi > params['rsi_entry']) & (df.shift(1).rsi < params['rsi_entry']) & (df.index < cutoff)]\n",
-    "    signals.apply(lambda row: apply_trade(row), axis=1)\n",
-    "    \n",
-    "    return pd.DataFrame(trades, columns=['symbol', 'bdate', 'bprice', 'sdate', 'sprice', 'pct_return', 'sell_descr'])\n",
-    "\n",
-    "# Testing section\n",
-    "params={'rsi_entry': 30, 'rsi_exit': 40, 'sma_period': 200, 'stop_loss_pct': 0, 'max_lookahead': 16}\n",
-    "symbol = 'AAPL'\n",
-    "df = load_symbol(symbol)\n",
-    "trades = rsi_momo_strategy(symbol, df, params)\n",
-    "print(f'rsi_momo_strategy\\n{trades}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9aa45965",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(results)\n",
-    "df.to_csv('./rsi_momo.results.csv')\n",
-    "params={'rsi_entry': 30, 'rsi_exit': 40, 'sma_period': 200, 'stop_loss_pct': 0, 'max_lookahead': 16}\n",
-    "df = uberdf_one_config(udf, params)\n",
-    "df.to_csv('./rsi_momo.best-params-trades.csv')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "691d1b56",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>adj close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>4,169.00</td>\n",
-       "      <td>4,169.00</td>\n",
-       "      <td>4,169.00</td>\n",
-       "      <td>4,169.00</td>\n",
-       "      <td>4,169.00</td>\n",
-       "      <td>4,169.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>188.89</td>\n",
-       "      <td>189.92</td>\n",
-       "      <td>187.75</td>\n",
-       "      <td>188.91</td>\n",
-       "      <td>167.33</td>\n",
-       "      <td>135,653,037.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>79.09</td>\n",
-       "      <td>79.39</td>\n",
-       "      <td>78.76</td>\n",
-       "      <td>79.12</td>\n",
-       "      <td>86.25</td>\n",
-       "      <td>96,485,287.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>67.95</td>\n",
-       "      <td>70.00</td>\n",
-       "      <td>67.10</td>\n",
-       "      <td>68.11</td>\n",
-       "      <td>53.16</td>\n",
-       "      <td>15,270,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>127.42</td>\n",
-       "      <td>128.23</td>\n",
-       "      <td>126.62</td>\n",
-       "      <td>127.44</td>\n",
-       "      <td>97.82</td>\n",
-       "      <td>69,192,800.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>156.93</td>\n",
-       "      <td>157.52</td>\n",
-       "      <td>155.91</td>\n",
-       "      <td>156.82</td>\n",
-       "      <td>133.84</td>\n",
-       "      <td>105,255,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>241.18</td>\n",
-       "      <td>242.08</td>\n",
-       "      <td>239.45</td>\n",
-       "      <td>240.61</td>\n",
-       "      <td>224.30</td>\n",
-       "      <td>169,863,700.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>439.31</td>\n",
-       "      <td>441.03</td>\n",
-       "      <td>439.26</td>\n",
-       "      <td>441.02</td>\n",
-       "      <td>441.02</td>\n",
-       "      <td>871,026,300.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          open     high      low    close  adj close         volume\n",
-       "count 4,169.00 4,169.00 4,169.00 4,169.00   4,169.00       4,169.00\n",
-       "mean    188.89   189.92   187.75   188.91     167.33 135,653,037.25\n",
-       "std      79.09    79.39    78.76    79.12      86.25  96,485,287.45\n",
-       "min      67.95    70.00    67.10    68.11      53.16  15,270,000.00\n",
-       "25%     127.42   128.23   126.62   127.44      97.82  69,192,800.00\n",
-       "50%     156.93   157.52   155.91   156.82     133.84 105,255,000.00\n",
-       "75%     241.18   242.08   239.45   240.61     224.30 169,863,700.00\n",
-       "max     439.31   441.03   439.26   441.02     441.02 871,026,300.00"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def load_symbol(symbol):\n",
-    "    file = f\"datasets/{symbol}.csv.gz\"\n",
-    "    if os.path.isfile(file):\n",
-    "        df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
-    "    else:\n",
-    "        period = '3mo'\n",
-    "        df = yf.download(symbol, progress=False, start='2005-01-01')\n",
-    "        df.columns = df.columns.str.lower()\n",
-    "        df.to_csv(file,index=True)\n",
-    "    df['symbol'] = symbol\n",
-    "    df.name = symbol\n",
-    "    return df\n",
-    "\n",
-    "df = load_symbol('SPY')\n",
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "e400b3d0-fce7-4a06-9ce3-697af1ff0ccf",
    "metadata": {},
@@ -596,14 +236,21 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas_market_calendars as mcal\n",
+    "import datetime as dt\n",
     "symbol = 'AAPL'\n",
     "file = f\"datasets/{symbol}.csv.gz\"\n",
-    "df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
+    "#df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
     "df = pd.read_csv(file, parse_dates=True)\n",
-    "df.columns = df.columns.str.lower()\n",
-    "df.index = df.date\n",
     "df.symbol = symbol\n",
     "#df['symbol'] = symbol\n",
+    "\n",
+    "def df_normalize(symbol, df)\n",
+    "    df.reset_index(inplace=True)\n",
+    "    df.columns = df.columns.str.lower()\n",
+    "    df.set_index('date', inplace=True)\n",
+    "    df.index = pd.to_datetime(df.index)\n",
+    "    df.symbol = symbol\n",
+    "    return df\n",
     "\n",
     "def need_update(df):  \n",
     "    symbol = df.symbol\n",
@@ -621,8 +268,11 @@
     "    # TODO: How does this handle weekends and mid day\n",
     "    # end is not included\n",
     "    delta_df = yf.download(symbol, progress=False, start=next_close_ts.strftime('%Y-%m-%d'))\n",
-    "    delta_df.columns = delta_df.columns.str.lower()\n",
-    "    delta_df['date'] = delta_df.index\n",
+    "#     delta_df.columns = delta_df.columns.str.lower()\n",
+    "#     delta_df['date'] = delta_df.index\n",
+    "#     delta_df.index = delta_df.date\n",
+    "    delta_df = df_normalize(symbol, delta_df)\n",
+    "    \n",
     "    df = df.append(delta_df)\n",
     "    df.symbol = symbol\n",
     "    return df\n",
@@ -633,90 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "bcfe99f8-c9d3-4542-876e-8a724123a339",
+   "execution_count": 53,
+   "id": "b25e49c1-58c1-450a-8e08-b2b490e74e28",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>bdate</th>\n",
-       "      <th>bprice</th>\n",
-       "      <th>sdate</th>\n",
-       "      <th>sprice</th>\n",
-       "      <th>pct_return</th>\n",
-       "      <th>sell_descr</th>\n",
-       "      <th>rsi</th>\n",
-       "      <th>sma</th>\n",
-       "      <th>atr</th>\n",
-       "      <th>adx</th>\n",
-       "      <th>strategy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>QQQ</td>\n",
-       "      <td>2010-05-11</td>\n",
-       "      <td>47.29</td>\n",
-       "      <td>2010-05-12</td>\n",
-       "      <td>47.98</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>rsi_exit</td>\n",
-       "      <td>44.63</td>\n",
-       "      <td>46.56</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>rsi_xover</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  symbol      bdate  bprice      sdate  sprice  pct_return sell_descr   rsi  \\\n",
-       "0    QQQ 2010-05-11   47.29 2010-05-12   47.98        0.01   rsi_exit 44.63   \n",
-       "\n",
-       "    sma  atr  adx   strategy  \n",
-       "0 46.56 1.30    0  rsi_xover  "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%run rsi_momo.py\n",
-    "symbol = 'QQQ'\n",
+    "symbol = 'XLK'\n",
     "df = load_symbol(symbol)\n",
-    "params = {'rsi_entry': 25, 'rsi_exit': 40, 'sma_period': 100, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1385 }\n",
-    "rsi_momo_strategy(symbol, df, params)\n"
+    "params = {'rsi_entry': 25, 'rsi_exit': 35, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1322 }\n",
+    "df = rsi_momo_strategy(symbol, df, params)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d8f3b8-d511-4a6c-a42b-e50bce7f5d1d",
+   "id": "7b514006-f22d-43ab-b9eb-f0b215d47c44",
    "metadata": {},
    "outputs": [],
    "source": []
