--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ba1cdd1a",
    "metadata": {},
    "outputs": [],
@@ -48,10 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "e400b3d0-fce7-4a06-9ce3-697af1ff0ccf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "symbol=AAPL from=2021-07-24 20:00:00+00:00\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -73,64 +80,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>open</th>\n",
        "      <th>high</th>\n",
        "      <th>low</th>\n",
        "      <th>close</th>\n",
-       "      <th>adj close</th>\n",
        "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2005-01-03</th>\n",
-       "      <td>2005-01-03</td>\n",
        "      <td>1.16</td>\n",
        "      <td>1.16</td>\n",
        "      <td>1.12</td>\n",
        "      <td>1.13</td>\n",
-       "      <td>0.97</td>\n",
        "      <td>691992000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005-01-04</th>\n",
-       "      <td>2005-01-04</td>\n",
        "      <td>1.14</td>\n",
        "      <td>1.17</td>\n",
        "      <td>1.12</td>\n",
        "      <td>1.14</td>\n",
-       "      <td>0.98</td>\n",
        "      <td>1096810400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005-01-05</th>\n",
-       "      <td>2005-01-05</td>\n",
        "      <td>1.15</td>\n",
        "      <td>1.17</td>\n",
        "      <td>1.14</td>\n",
        "      <td>1.15</td>\n",
-       "      <td>0.99</td>\n",
        "      <td>680433600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005-01-06</th>\n",
-       "      <td>2005-01-06</td>\n",
        "      <td>1.15</td>\n",
        "      <td>1.16</td>\n",
        "      <td>1.13</td>\n",
        "      <td>1.15</td>\n",
-       "      <td>0.99</td>\n",
        "      <td>705555200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005-01-07</th>\n",
-       "      <td>2005-01-07</td>\n",
        "      <td>1.16</td>\n",
        "      <td>1.24</td>\n",
        "      <td>1.16</td>\n",
        "      <td>1.24</td>\n",
-       "      <td>1.06</td>\n",
        "      <td>2227450400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -140,146 +143,76 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-22</th>\n",
-       "      <td>2021-07-22</td>\n",
-       "      <td>145.94</td>\n",
-       "      <td>148.20</td>\n",
-       "      <td>145.81</td>\n",
-       "      <td>146.80</td>\n",
-       "      <td>146.80</td>\n",
-       "      <td>77338200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-23</th>\n",
-       "      <td>2021-07-23</td>\n",
-       "      <td>147.55</td>\n",
-       "      <td>148.72</td>\n",
-       "      <td>146.92</td>\n",
-       "      <td>148.56</td>\n",
-       "      <td>148.56</td>\n",
-       "      <td>71361600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07-26 00:00:00</th>\n",
-       "      <td>2021-07-26 00:00:00</td>\n",
+       "      <th>2021-07-26</th>\n",
        "      <td>148.27</td>\n",
        "      <td>149.83</td>\n",
        "      <td>147.70</td>\n",
        "      <td>148.99</td>\n",
-       "      <td>148.99</td>\n",
        "      <td>72269700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-27 00:00:00</th>\n",
-       "      <td>2021-07-27 00:00:00</td>\n",
+       "      <th>2021-07-27</th>\n",
        "      <td>149.12</td>\n",
        "      <td>149.21</td>\n",
        "      <td>145.55</td>\n",
        "      <td>146.77</td>\n",
-       "      <td>146.77</td>\n",
        "      <td>103580300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-28 00:00:00</th>\n",
-       "      <td>2021-07-28 00:00:00</td>\n",
+       "      <th>2021-07-28</th>\n",
        "      <td>144.81</td>\n",
        "      <td>146.97</td>\n",
        "      <td>142.54</td>\n",
        "      <td>144.98</td>\n",
-       "      <td>144.98</td>\n",
        "      <td>118834300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-29</th>\n",
+       "      <td>144.69</td>\n",
+       "      <td>146.55</td>\n",
+       "      <td>144.58</td>\n",
+       "      <td>145.64</td>\n",
+       "      <td>56507100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-30</th>\n",
+       "      <td>144.38</td>\n",
+       "      <td>146.33</td>\n",
+       "      <td>144.11</td>\n",
+       "      <td>145.86</td>\n",
+       "      <td>64471899</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4171 rows × 7 columns</p>\n",
+       "<p>4173 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    date   open   high    low  close  \\\n",
-       "2005-01-03                    2005-01-03   1.16   1.16   1.12   1.13   \n",
-       "2005-01-04                    2005-01-04   1.14   1.17   1.12   1.14   \n",
-       "2005-01-05                    2005-01-05   1.15   1.17   1.14   1.15   \n",
-       "2005-01-06                    2005-01-06   1.15   1.16   1.13   1.15   \n",
-       "2005-01-07                    2005-01-07   1.16   1.24   1.16   1.24   \n",
-       "...                                  ...    ...    ...    ...    ...   \n",
-       "2021-07-22                    2021-07-22 145.94 148.20 145.81 146.80   \n",
-       "2021-07-23                    2021-07-23 147.55 148.72 146.92 148.56   \n",
-       "2021-07-26 00:00:00  2021-07-26 00:00:00 148.27 149.83 147.70 148.99   \n",
-       "2021-07-27 00:00:00  2021-07-27 00:00:00 149.12 149.21 145.55 146.77   \n",
-       "2021-07-28 00:00:00  2021-07-28 00:00:00 144.81 146.97 142.54 144.98   \n",
+       "             open   high    low  close      volume\n",
+       "date                                              \n",
+       "2005-01-03   1.16   1.16   1.12   1.13   691992000\n",
+       "2005-01-04   1.14   1.17   1.12   1.14  1096810400\n",
+       "2005-01-05   1.15   1.17   1.14   1.15   680433600\n",
+       "2005-01-06   1.15   1.16   1.13   1.15   705555200\n",
+       "2005-01-07   1.16   1.24   1.16   1.24  2227450400\n",
+       "...           ...    ...    ...    ...         ...\n",
+       "2021-07-26 148.27 149.83 147.70 148.99    72269700\n",
+       "2021-07-27 149.12 149.21 145.55 146.77   103580300\n",
+       "2021-07-28 144.81 146.97 142.54 144.98   118834300\n",
+       "2021-07-29 144.69 146.55 144.58 145.64    56507100\n",
+       "2021-07-30 144.38 146.33 144.11 145.86    64471899\n",
        "\n",
-       "                     adj close      volume  \n",
-       "2005-01-03                0.97   691992000  \n",
-       "2005-01-04                0.98  1096810400  \n",
-       "2005-01-05                0.99   680433600  \n",
-       "2005-01-06                0.99   705555200  \n",
-       "2005-01-07                1.06  2227450400  \n",
-       "...                        ...         ...  \n",
-       "2021-07-22              146.80    77338200  \n",
-       "2021-07-23              148.56    71361600  \n",
-       "2021-07-26 00:00:00     148.99    72269700  \n",
-       "2021-07-27 00:00:00     146.77   103580300  \n",
-       "2021-07-28 00:00:00     144.98   118834300  \n",
-       "\n",
-       "[4171 rows x 7 columns]"
+       "[4173 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from pathlib import Path\n",
-    "import pandas_market_calendars as mcal\n",
-    "import datetime as dt\n",
-    "symbol = 'AAPL'\n",
-    "file = f\"datasets/{symbol}.csv.gz\"\n",
-    "#df = pd.read_csv(file, index_col='Date', parse_dates=True)\n",
-    "df = pd.read_csv(file, parse_dates=True)\n",
-    "df.symbol = symbol\n",
-    "#df['symbol'] = symbol\n",
-    "\n",
-    "def df_normalize(symbol, df)\n",
-    "    df.reset_index(inplace=True)\n",
-    "    df.columns = df.columns.str.lower()\n",
-    "    df.set_index('date', inplace=True)\n",
-    "    df.index = pd.to_datetime(df.index)\n",
-    "    df.symbol = symbol\n",
-    "    return df\n",
-    "\n",
-    "def need_update(df):  \n",
-    "    symbol = df.symbol\n",
-    "    last_ts = df.iloc[-1].name\n",
-    "    nyse = mcal.get_calendar('NYSE')\n",
-    "    schedule = nyse.schedule(start_date=last_ts, end_date=last_ts)\n",
-    "    last_ts = schedule.loc[last_ts].market_close\n",
-    "    next_close_ts = last_ts + dt.timedelta(days=1)\n",
-    "\n",
-    "    now_ts = pd.Timestamp.utcnow()\n",
-    "    schedule = nyse.schedule(start_date=now_ts, end_date=now_ts).iloc[0]\n",
-    "\n",
-    "    if next_close_ts >= schedule.market_close:\n",
-    "        return False\n",
-    "    # TODO: How does this handle weekends and mid day\n",
-    "    # end is not included\n",
-    "    delta_df = yf.download(symbol, progress=False, start=next_close_ts.strftime('%Y-%m-%d'))\n",
-    "#     delta_df.columns = delta_df.columns.str.lower()\n",
-    "#     delta_df['date'] = delta_df.index\n",
-    "#     delta_df.index = delta_df.date\n",
-    "    delta_df = df_normalize(symbol, delta_df)\n",
-    "    \n",
-    "    df = df.append(delta_df)\n",
-    "    df.symbol = symbol\n",
-    "    return df\n",
-    "\n",
-    "df = need_update(df)\n",
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
