Files with Indexes

--- a/Strategy.RSI.ipynb
+++ b/Strategy.RSI.ipynb
@@ -48,17 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e400b3d0-fce7-4a06-9ce3-697af1ff0ccf",
+   "execution_count": 44,
+   "id": "b25e49c1-58c1-450a-8e08-b2b490e74e28",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "symbol=AAPL from=2021-07-24 20:00:00+00:00\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -80,161 +73,317 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>bdate</th>\n",
+       "      <th>bprice</th>\n",
+       "      <th>sdate</th>\n",
+       "      <th>sprice</th>\n",
+       "      <th>pct_return</th>\n",
+       "      <th>sell_descr</th>\n",
+       "      <th>overlap</th>\n",
+       "      <th>param_id</th>\n",
+       "      <th>days_open</th>\n",
+       "      <th>strategy</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>sma</th>\n",
+       "      <th>sma20</th>\n",
+       "      <th>atr</th>\n",
+       "      <th>roc</th>\n",
+       "      <th>adx</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2005-01-03</th>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>691992000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2011-03-17</td>\n",
+       "      <td>25.02</td>\n",
+       "      <td>2011-03-22</td>\n",
+       "      <td>25.36</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>3</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>31.36</td>\n",
+       "      <td>20.67</td>\n",
+       "      <td>22.09</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>-4.26</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-04</th>\n",
-       "      <td>1.14</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>1096810400</td>\n",
+       "      <th>1</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2012-05-17</td>\n",
+       "      <td>28.17</td>\n",
+       "      <td>2012-05-22</td>\n",
+       "      <td>28.24</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>3</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>18.54</td>\n",
+       "      <td>23.65</td>\n",
+       "      <td>25.13</td>\n",
+       "      <td>4.13</td>\n",
+       "      <td>-7.32</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-05</th>\n",
-       "      <td>1.15</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>680433600</td>\n",
+       "      <th>2</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2014-12-17</td>\n",
+       "      <td>39.95</td>\n",
+       "      <td>2014-12-18</td>\n",
+       "      <td>41.30</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>40.52</td>\n",
+       "      <td>35.58</td>\n",
+       "      <td>37.53</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>-3.40</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-06</th>\n",
-       "      <td>1.15</td>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>705555200</td>\n",
+       "      <th>3</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2016-05-02</td>\n",
+       "      <td>42.22</td>\n",
+       "      <td>2016-05-09</td>\n",
+       "      <td>42.27</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>5</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>31.26</td>\n",
+       "      <td>39.17</td>\n",
+       "      <td>40.68</td>\n",
+       "      <td>3.23</td>\n",
+       "      <td>-4.65</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005-01-07</th>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.24</td>\n",
-       "      <td>1.16</td>\n",
-       "      <td>1.24</td>\n",
-       "      <td>2227450400</td>\n",
+       "      <th>4</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2018-03-26</td>\n",
+       "      <td>65.59</td>\n",
+       "      <td>2018-03-27</td>\n",
+       "      <td>67.13</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>44.10</td>\n",
+       "      <td>60.74</td>\n",
+       "      <td>65.50</td>\n",
+       "      <td>3.46</td>\n",
+       "      <td>-3.28</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2019-05-14</td>\n",
+       "      <td>73.68</td>\n",
+       "      <td>2019-05-16</td>\n",
+       "      <td>75.35</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>34.40</td>\n",
+       "      <td>67.53</td>\n",
+       "      <td>75.42</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>-5.18</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-26</th>\n",
-       "      <td>148.27</td>\n",
-       "      <td>149.83</td>\n",
-       "      <td>147.70</td>\n",
-       "      <td>148.99</td>\n",
-       "      <td>72269700</td>\n",
+       "      <th>6</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2019-06-04</td>\n",
+       "      <td>71.53</td>\n",
+       "      <td>2019-06-05</td>\n",
+       "      <td>73.96</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>44.27</td>\n",
+       "      <td>67.88</td>\n",
+       "      <td>72.23</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>-3.95</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-27</th>\n",
-       "      <td>149.12</td>\n",
-       "      <td>149.21</td>\n",
-       "      <td>145.55</td>\n",
-       "      <td>146.77</td>\n",
-       "      <td>103580300</td>\n",
+       "      <th>7</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>76.77</td>\n",
+       "      <td>2019-08-08</td>\n",
+       "      <td>78.11</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>32.17</td>\n",
+       "      <td>71.82</td>\n",
+       "      <td>78.88</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>-4.56</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-28</th>\n",
-       "      <td>144.81</td>\n",
-       "      <td>146.97</td>\n",
-       "      <td>142.54</td>\n",
-       "      <td>144.98</td>\n",
-       "      <td>118834300</td>\n",
+       "      <th>8</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2020-02-28</td>\n",
+       "      <td>84.21</td>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>94.01</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rsi_xunder</td>\n",
+       "      <td>24.08</td>\n",
+       "      <td>85.06</td>\n",
+       "      <td>96.34</td>\n",
+       "      <td>3.08</td>\n",
+       "      <td>-12.24</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-29</th>\n",
-       "      <td>144.69</td>\n",
-       "      <td>146.55</td>\n",
-       "      <td>144.58</td>\n",
-       "      <td>145.64</td>\n",
-       "      <td>56507100</td>\n",
+       "      <th>9</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2012-05-22</td>\n",
+       "      <td>28.24</td>\n",
+       "      <td>2012-05-23</td>\n",
+       "      <td>27.85</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rsi_xover</td>\n",
+       "      <td>37.28</td>\n",
+       "      <td>23.69</td>\n",
+       "      <td>24.98</td>\n",
+       "      <td>4.14</td>\n",
+       "      <td>-3.47</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-07-30</th>\n",
-       "      <td>144.38</td>\n",
-       "      <td>146.33</td>\n",
-       "      <td>144.11</td>\n",
-       "      <td>145.86</td>\n",
-       "      <td>64471899</td>\n",
+       "      <th>10</th>\n",
+       "      <td>XLK</td>\n",
+       "      <td>2018-10-15</td>\n",
+       "      <td>70.57</td>\n",
+       "      <td>2018-10-17</td>\n",
+       "      <td>71.86</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>rsi_exit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rsi_xover</td>\n",
+       "      <td>34.31</td>\n",
+       "      <td>68.07</td>\n",
+       "      <td>71.13</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>-7.17</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4173 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             open   high    low  close      volume\n",
-       "date                                              \n",
-       "2005-01-03   1.16   1.16   1.12   1.13   691992000\n",
-       "2005-01-04   1.14   1.17   1.12   1.14  1096810400\n",
-       "2005-01-05   1.15   1.17   1.14   1.15   680433600\n",
-       "2005-01-06   1.15   1.16   1.13   1.15   705555200\n",
-       "2005-01-07   1.16   1.24   1.16   1.24  2227450400\n",
-       "...           ...    ...    ...    ...         ...\n",
-       "2021-07-26 148.27 149.83 147.70 148.99    72269700\n",
-       "2021-07-27 149.12 149.21 145.55 146.77   103580300\n",
-       "2021-07-28 144.81 146.97 142.54 144.98   118834300\n",
-       "2021-07-29 144.69 146.55 144.58 145.64    56507100\n",
-       "2021-07-30 144.38 146.33 144.11 145.86    64471899\n",
+       "   symbol      bdate  bprice      sdate  sprice  pct_return sell_descr  \\\n",
+       "0     XLK 2011-03-17   25.02 2011-03-22   25.36        0.01   rsi_exit   \n",
+       "1     XLK 2012-05-17   28.17 2012-05-22   28.24        0.00   rsi_exit   \n",
+       "2     XLK 2014-12-17   39.95 2014-12-18   41.30        0.03   rsi_exit   \n",
+       "3     XLK 2016-05-02   42.22 2016-05-09   42.27        0.00   rsi_exit   \n",
+       "4     XLK 2018-03-26   65.59 2018-03-27   67.13        0.02   rsi_exit   \n",
+       "5     XLK 2019-05-14   73.68 2019-05-16   75.35        0.02   rsi_exit   \n",
+       "6     XLK 2019-06-04   71.53 2019-06-05   73.96        0.03   rsi_exit   \n",
+       "7     XLK 2019-08-06   76.77 2019-08-08   78.11        0.02   rsi_exit   \n",
+       "8     XLK 2020-02-28   84.21 2020-03-03   94.01        0.12   rsi_exit   \n",
+       "9     XLK 2012-05-22   28.24 2012-05-23   27.85       -0.01   rsi_exit   \n",
+       "10    XLK 2018-10-15   70.57 2018-10-17   71.86        0.02   rsi_exit   \n",
        "\n",
-       "[4173 rows x 5 columns]"
+       "    overlap  param_id  days_open    strategy   rsi   sma  sma20  atr    roc  \\\n",
+       "0         0      1322          3  rsi_xunder 31.36 20.67  22.09 4.09  -4.26   \n",
+       "1         0      1322          3  rsi_xunder 18.54 23.65  25.13 4.13  -7.32   \n",
+       "2         0      1322          1  rsi_xunder 40.52 35.58  37.53 4.23  -3.40   \n",
+       "3         0      1322          5  rsi_xunder 31.26 39.17  40.68 3.23  -4.65   \n",
+       "4         0      1322          1  rsi_xunder 44.10 60.74  65.50 3.46  -3.28   \n",
+       "5         0      1322          2  rsi_xunder 34.40 67.53  75.42 2.43  -5.18   \n",
+       "6         0      1322          1  rsi_xunder 44.27 67.88  72.23 2.45  -3.95   \n",
+       "7         0      1322          2  rsi_xunder 32.17 71.82  78.88 2.43  -4.56   \n",
+       "8         0      1322          2  rsi_xunder 24.08 85.06  96.34 3.08 -12.24   \n",
+       "9         1      1322          1   rsi_xover 37.28 23.69  24.98 4.14  -3.47   \n",
+       "10        0      1322          2   rsi_xover 34.31 68.07  71.13 3.07  -7.17   \n",
+       "\n",
+       "    adx  \n",
+       "0  0.00  \n",
+       "1  0.00  \n",
+       "2  0.00  \n",
+       "3  0.00  \n",
+       "4  0.00  \n",
+       "5  0.00  \n",
+       "6  0.00  \n",
+       "7  0.00  \n",
+       "8  0.00  \n",
+       "9  0.00  \n",
+       "10 0.00  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "b25e49c1-58c1-450a-8e08-b2b490e74e28",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#%run rsi_momo.py\n",
+    "#configs = enumerate_params()\n",
+    "params = [{'rsi_entry': 25, 'rsi_exit': 35, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1322 }]\n",
     "symbol = 'XLK'\n",
-    "df = load_symbol(symbol)\n",
-    "params = {'rsi_entry': 25, 'rsi_exit': 35, 'sma_period': 150, 'stop_loss_pct': 10, 'max_trade_days': 12, 'id': 1322 }\n",
-    "df = rsi_momo_strategy(symbol, df, params)\n"
+    "udf = {symbol: load_symbol(symbol)}\n",
+    "uberdf_enrich(udf,params)\n",
+    "df = rsi_momo_strategy(symbol, udf[symbol], params[0])\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7b514006-f22d-43ab-b9eb-f0b215d47c44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "symbol = 'XLK'\n",
+    "df = load_symbol(symbol)\n"
+   ]
   }
  ],
  "metadata": {
