Refactor post-processing

--- a/Strategy.MonthlyDogs.ipynb
+++ b/Strategy.MonthlyDogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "id": "134e32d3-d41b-49e5-9b7b-5863ea524051",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "id": "fbd434ec-32e6-4af0-9d53-4a7e39c65502",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "[4173 rows x 505 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "id": "95cc68d9-cf08-4e53-b38b-33ed4d477f76",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "1e56bbd9-fad0-40cf-a917-bae967806112",
    "metadata": {},
    "outputs": [],
@@ -484,17 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "id": "f93b0b7e-3c30-4f0e-a64a-cb9322dc5023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.2571558902685344"
+       "-0.027904458747095646"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "id": "69c58236-4b73-469e-9abe-b13c697d589a",
    "metadata": {},
    "outputs": [
@@ -540,6 +540,16 @@
     }
    ],
    "source": [
+    "def cook_qtile_df(formation_dt, bins, monthly_rets):\n",
+    "    df = monthly_rets.loc[formation_dt - MonthEnd(1)].copy()\n",
+    "    df.name = 'returns'\n",
+    "    df = pd.DataFrame(df)\n",
+    "    df['qtile'] = pd.qcut(df.returns, bins, labels=False, duplicates='drop')\n",
+    "    qdf.groupby('qtile').returns.mean()\n",
+    "    #for i in range(0, qdf.qtile.max()+1): print (f'{i:02d} mean: {qdf[qdf.qtile == i].returns.mean():+03.2%}')\n",
+    "    #decile_ret = monthly_rets.loc[formation_dt, monthly_rets.columns.isin(symbols)].mean()\n",
+    "    return df\n",
+    "\n",
     "def monthly_decile(formation_dt, decile, monthly_rets):\n",
     "    df = monthly_rets.loc[formation_dt - MonthEnd(1)].copy()\n",
     "    df.name = 'returns'\n",
